# kitty-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gba/: Makefile
gba/src/: main.c
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/data/: plugin-bridge.gba  rom.gba
